@@ -1340,6 +1340,7 @@ systemSettings.coloursSaved=Colors have been saved
 systemSettings.emailSettings=Email settings
 systemSettings.smtpHost=SMTP host
 systemSettings.smtpPort=SMTP port
+systemSettings.smtpTimeout=SMTP connection timeout
 systemSettings.fromAddress=''From'' address
 systemSettings.fromName=''From'' name
 systemSettings.auth=Use authorization
