@@ -523,6 +523,11 @@
 			<version>1.6.2</version>
 		</dependency>
 		<dependency>
+    		<groupId>com.sun.mail</groupId>
+	    	<artifactId>javax.mail</artifactId>
+	    	<version>1.6.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.196</version>
