@@ -1,83 +1,0 @@
-/*
-    Copyright (C) 2006-2007 Serotonin Software Technologies Inc.
- 	@author Matthew Lohbihler
- */
-package com.serotonin.web.mail;
-
-/**
- * @author Matthew Lohbihler
- */
-public class EmailConfiguration {
-    private String host;
-    private int port = -1;
-    private boolean useAuth;
-    private String username;
-    private String password;
-    private String fromAddress;
-    private String fromPrettyName;
-    private boolean tls;
-
-    public String getHost() {
-        return host;
-    }
-
-    public void setHost(String host) {
-        this.host = host;
-    }
-
-    public int getPort() {
-        return port;
-    }
-
-    public void setPort(int port) {
-        this.port = port;
-    }
-
-    public boolean isUseAuth() {
-        return useAuth;
-    }
-
-    public void setUseAuth(boolean useAuth) {
-        this.useAuth = useAuth;
-    }
-
-    public String getUsername() {
-        return username;
-    }
-
-    public void setUsername(String username) {
-        this.username = username;
-    }
-
-    public String getPassword() {
-        return password;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public String getFromAddress() {
-        return fromAddress;
-    }
-
-    public void setFromAddress(String fromAddress) {
-        this.fromAddress = fromAddress;
-    }
-
-    public String getFromPrettyName() {
-        return fromPrettyName;
-    }
-
-    public void setFromPrettyName(String fromPrettyName) {
-        this.fromPrettyName = fromPrettyName;
-    }
-
-    public boolean isTls() {
-        return tls;
-    }
-
-    public void setTls(boolean tls) {
-        this.tls = tls;
-    }
-}
