@@ -7,6 +7,7 @@
 * Improve handling of exception in data point listeners on initialize or terminate when only 1 listener is present
 * Modify email FTL Model for events, references to evt.alarmLevel in overridden templates should be changed to evt.alarmLevel.value()
 * Expose connection description and data source type translations in Data Source REST models
+* Add SMTP mail server connection/read/write timeout system setting
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
